--- a/inzynierstwo/literatura.bib
+++ b/inzynierstwo/literatura.bib
@@ -60,17 +60,17 @@ url={https://spring.io/projects/spring-security}
 }
 
 @misc{MdbAngularBootstrap,
-	title={Spring Security Overview},
+	title={Angular Charts Bootstrap},
 	howpublished={Web pages: \url{https://mdbootstrap.com/docs/angular/advanced/charts/#docsTabsOverview}},
 	url={https://mdbootstrap.com/docs/angular/advanced/charts/#docsTabsOverview}
 }
 
 
-@book{HTML-CSS,
-    author={Ben Frain},
-    title={Responsive Web Design with HTML5 and CSS3},
+@book{Rest,
+    author={Bhakti Mehta},
+    title={RESTful Java Patterns and Best Practices},
     publisher={Packt Publishing},
-    year={2012}
+    year={2014}
 }
 
 
