--- a/inzynierstwo/podsumowanie.tex
+++ b/inzynierstwo/podsumowanie.tex
@@ -7,5 +7,5 @@ Celem niniejszej pracy inżynierskiej było stworzenie aplikacji internetowej ws
 
 \section{Plany rozwoju aplikacji}
 Po zapoznaniu się z opiniami pierwszych użytkowników ważnym kierunkiem rozwoju aplikacji jest uczytelnienie i poprawa interfejsu użytkownika. Po okresie próbnym korzystania z aplikacji przez użytkowników, należy przeprowadzić ankietę lub zapoznać się z opiniami użytkowników na forach. Dzięki analizie zdania użytkowników aplikacja stanie się bardziej intuicyjna.
-Kolejnym, bardziej przyszłościowym kierunkiem byłaby synchronizacja z kontem Google lub Microsoft. Dzięki temu moglibyśmy rozszerzyć funcjonalności o posiadanie kalendarzu z wyświetlonymi datami z zadaniami jak i informacje odnośnie grafiku pracowniczego. Moglibyśmy również mieć odnośniki przy poszczególnych użytkownikach do ich skrzynki pocztowej email przez co komunikacja stałaby się o wiele łatwiejsza.  Jest to oczywiście proces w którym aplikacja utraci cechę  prostej, zwartej aplikacji, ale niestety będzie zależała też od innych, zewnętrznych rozwiązań. Dany pomysł na rozbudowę aplikacji możemy kontynuuować za pomocą rozbudowy informacji na temat użytkownika, przypięcie do aplikacji osobistego kanału smtp, aby użytkownicy dostawali przypisane do ich kont skrzynki pocztowe mogli komunikować się między sobą wewnętrznie za pomocą utworzonych służbowych kont. Kalendarz synchronizujący grafik pracowniczy z datami ukończenia poszczególnych zadań też jest  funkcjonalnością, która może zostać wdrożona bez obecności zewnętrznych aplikacji.
+Kolejnym, bardziej przyszłościowym kierunkiem byłaby synchronizacja z kontem Google lub Microsoft. Dzięki temu moglibyśmy rozszerzyć funkcjonalności o posiadanie kalendarzu z wyświetlonymi datami z zadaniami jak i informacje odnośnie grafiku pracowniczego. Moglibyśmy również mieć odnośniki przy poszczególnych użytkownikach do ich skrzynki pocztowej email przez co komunikacja stałaby się o wiele łatwiejsza.  Jest to oczywiście proces, w którym aplikacja utraci cechę prostej, zwartej aplikacji, ale niestety będzie zależała też od innych, zewnętrznych rozwiązań. Dany pomysł na rozbudowę aplikacji możemy kontynuować za pomocą rozbudowy informacji na temat użytkownika, przypięcie do aplikacji osobistego kanału smtp, aby użytkownicy dostawali przypisane do ich kont skrzynki pocztowe mogli komunikować się między sobą wewnętrznie za pomocą utworzonych służbowych kont. Kalendarz synchronizujący grafik pracowniczy z datami ukończenia poszczególnych zadań też jest funkcjonalnością, która może zostać wdrożona bez obecności zewnętrznych aplikacji.
 
