--- a/inzynierstwo/interfejsuzytkownika.tex
+++ b/inzynierstwo/interfejsuzytkownika.tex
@@ -1,7 +1,6 @@
 \chapter{Interfejs użytkownika}
-wstawienie skrinów aplikacji zauważenie ciekawych mechanizmów html css cytat książka html css
 \section{Widok strony głównej}
-Widok strony głównej zależy od tego czy sesja użytkownika jest autoryzowana. Przed zalogowaniem wyświetlane są informace na temat aplikacji. Po zalogowaniu zobaczyć możemy przyciski przekierowywujące użytkownika do głównych podmiotów aplikacji.
+Widok strony głównej zależy od tego czy sesja użytkownika jest autoryzowana. Przed zalogowaniem wyświetlane są informacje na temat aplikacji. Po zalogowaniu zobaczyć możemy przyciski przekierowujące użytkownika do głównych podmiotów aplikacji.
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.90\textwidth]{home-not-auth}
@@ -15,14 +14,14 @@ Widok strony głównej zależy od tego czy sesja użytkownika jest autoryzowana.
 	\includegraphics[width=0.90\textwidth]{home-auth}
 	
 	\caption{Widok strony głównej po zalogowaniu.}
-\label{auth-home}
+	\label{auth-home}
 \end{figure}
 
 \section{Widok nagłówka strony}
-Na rysunku \ref{navbar-states} przedstawiony został widok nagłówka, który jest elementem umiejscowionym na górze strony na każdym dostępnym widoku. Posiada przyciski przekierowywujące do innych podmiotów aplikacji.
-Stan z najmniejszą liczbą dostępnych opcji jest wyświetlany dla użytkownika niezalogowanego. Jedynymi możliwościami jest wtedy strona startowa, strona rejestracjyjna oraz strona z formularzem logowania.
+Na rysunku \ref{navbar-states} przedstawiony został widok nagłówka, który jest elementem umiejscowionym na górze strony na każdym dostępnym widoku. Posiada przyciski przekierowujące do innych podmiotów aplikacji.
+Stan z najmniejszą liczbą dostępnych opcji jest wyświetlany dla użytkownika niezalogowanego. Jedynymi możliwościami jest wtedy strona startowa, strona rejestracyjna oraz strona z formularzem logowania.
 Drugi stan jest wyświetlany dla administratora, który oprócz funkcji użytkownika posiada również zakładkę \linebreak \textit{Administration}, gdzie może przejść do zarządzania użytkownikami lub tablicą.
-Trzeci stan dla użytkownika o zwykłych uprawnieniach składa się z odnośnika do strony startowej, ale również wszystkie dostępne podmioty storny: 
+Trzeci stan dla użytkownika o zwykłych uprawnieniach składa się z odnośnika do strony startowej, ale również wszystkie dostępne podmioty strony: 
 \begin{itemize}
 	\item lista użytkowników, która jest jedynie listą podglądową, nie posiada ona licznych funkcji jak lista dla administratora \ref{users-list}
 	\item tablica kanban
@@ -61,8 +60,8 @@ Widok rejestracji i logowania składają się z formularza do wypełnienia, aby 
 \end{figure}
 \clearpage
 \subsection{Widok zmiany hasła}
-Widok \ref{change-pass} prezentuje formularz ze zmianą hasła. Ciekawym dodatkiem wprowadzonym do danego widoku jest pasek siły hasła. Jest to styl składający się z pięciu bloków kolorowanych odpowiednio na kolor czerwony pomarańczowy i zielony w zależności od tego jak silne hasło zostało wprowadzone. Odpowiedzialna za kolorwanie tych bloków metoda analizuje wprowadzone hasło pod kątem skomplikowania za pomocą wyrażeń regularnych.
-Sprawdzane zostaje czy w haśle użyty został conajmniej jeden symbol specjalny, jedna wielka litera, jedna mała litera oraz liczba.
+Widok \ref{change-pass} prezentuje formularz ze zmianą hasła. Ciekawym dodatkiem wprowadzonym do danego widoku jest pasek siły hasła. Jest to styl składający się z pięciu bloków kolorowanych odpowiednio na kolor czerwony pomarańczowy i zielony w zależności od tego jak silne hasło zostało wprowadzone. Odpowiedzialna za kolorowanie tych bloków metoda analizuje wprowadzone hasło pod kątem skomplikowania za pomocą wyrażeń regularnych.
+Sprawdzane zostaje czy w haśle użyty został co najmniej jeden symbol specjalny, jedna wielka litera, jedna mała litera oraz liczba.
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.90\textwidth]{change-pass}
@@ -73,7 +72,7 @@ Sprawdzane zostaje czy w haśle użyty został conajmniej jeden symbol specjalny
 \clearpage
 
 \section{Widok listy zadań i użytkowników}
-Widok list dostępnych z aplikacji składają się z responsywnych list, które wyświetlają informacje wyciągane z bazy danych w postaci stron. Serwis wysyłający zapytanie odnośnie listy użytkowników, bądź zadań przesyła informacje odnośnie ograniczeń. Podane listy ograniczone są do dwudziestupięciu elementów na stronę. Serwer wysyła maksymalną liczbę elementów oraz informację odnośnie liczby pozostałych elementów. Za pomocą tych danych otrzymujemy listę podzieloną na strony. Przejście na kolejną strone skutkowałoby wysłaniem zapytania o kolejne dwadzieścia pięć elemntów.
+Widok list dostępnych z aplikacji składają się z responsywnych list, które wyświetlają informacje wyciągane z bazy danych w postaci stron. Serwis wysyłający zapytanie o listę użytkowników bądź zadań dołącza informacje o ograniczeniach. Podane listy ograniczone są do dwudziestu pięciu elementów na stronę. Serwer wysyła maksymalną liczbę elementów oraz informację na temat liczby pozostałych elementów. Za pomocą tych danych otrzymujemy listę podzieloną na strony. Przejście na kolejną stronę skutkowałoby wysłaniem zapytania o kolejne dwadzieścia pięć elementów.
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.90\textwidth]{taskslist}
@@ -139,7 +138,7 @@ Niżej widnieje lista użytkowników oraz lista zadań. Po wybraniu odpowiednich
 \end{figure}
 \clearpage
 \section{Widok Szczegółów Zadania}
- Widok \ref{taskcomm} przedstawiający szczegóły zadania za pomocą formularza, który może zostać w każdej chwili zaktualizowany. W szczegółach zadania możemy wprowadzać odpowiednio komentarze dotyczące zadania. 
+Widok \ref{taskcomm} przedstawiający szczegóły zadania za pomocą formularza, który może zostać w każdej chwili zaktualizowany. W szczegółach zadania możemy wprowadzać odpowiednio komentarze dotyczące zadania. 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.90\textwidth]{taskcomm}
